- Added : Added a new Database Driver (MySQLi). (young-pee)
- Added : Added debugging functions included in the XOOPS boot process to allow easy output of debugging lines by core and modules developers (include/debug_functions.php) (malanciault)
- Added : Addition of the XoopsEditors framework with default editor (malanciault)

- Improved: When the User registration is Off... all links to register.php are not shown.

Working Changes : (Changes to be reverted or made definitive)

- Commented a line in common.php ... someone can tell for what is this line? (young-pee)

========================
Unreleased: XOOPS 2.0.18
========================

- improved : html and css installer (dugris)
- fixed #1824377 : _MA_USER_SENDMAIL not defined (Garrath/dugris)
- fixed #1540480 : $modversion constant language truncated (zoullou/dugris)
- Fixed #1779344 : City renamed (young-pee)
- Fixed #1333337 : Grp memberships lost when usr w. no Group perm edits usr act (jegelstaff/dugris)
- Fixed #1821846 : mistake on RpcDateTimeHandle (Garrath/dugris)
- improved : include multiple language files (DuGris)
- Fixed : themes, Cascading - add themes screenshot (kris_fr/DuGris)
- Fixed bug #1415777 : xml feed is not working when debug mode is activated (DuGris)
- Fixed : Do not display the comment form if the option module "Allow anonymous post in comments?" is disabled (dugris)
- Fixed bug #1808484 : Check modules permissions before displaying "Recent comments blocks" (herve/dugris)
- Fixed #1782185 : Adding new parameters (width, height, max file size) for uploading ranks (dugris)
- Default theme corrected : xhtml transitional 1.0, css 1/2/3 (kris_fr)
- improved : xhtml/css compliance /banners.php (kris_fr)
- new favicon.ico (http://www.xoops.org/modules/news/article.php?storyid=2749 - http://www.xoops.org/uploads/OfficialLogoKit.zip)
- improved : xhtml/css compliance (kris_fr)
- Fixed bug #1779352 : Hardcoded language, Secure and improve code, Removal style/css (young-pee/dugris)